Added new stuff to HTML

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
+<a>"https://www.w3schools.com/html/html_basic.asp">Goated Website</a>
+<img>"Soccerball.jpeg"</img>
   <head>
-    
+    <h1>Brayden-Y is cracked</h1>
+<h2>:)</h1>
   </head>
   <body>
-      <p>Mr. Caiznha</p>    
+      <p>Mr-Cazinha</p>    
   </body>
 </html>
