--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
     <title>SignBook</title>
 <style>
-   body {
+   body #sullivan {
          background-color: LemonChiffon;
        }
-       h1 {
+       h1 #sullivan {
          color: SkyBlue;
          text-align: center;
          font-family: Papyrus, Copperplate, Lucida Console;
          font-size: 40px;
        }
-       p {
+       p #sullivan {
          color: Maroon;
          text-align: center;
          font-family: Copperplate, Papyrus, Lucida Console;
@@ -70,7 +70,7 @@ font-family: "Comic Sans MS", serif;
   </head>
   <body style="background-color:Gainsboro;"> 
     <p style="color;teal">Akira Fujita</p>
-      <h1>I am Sullivan Wang, the best Breath of the Wild speedrunner ever.</h1>
+      <h1> id= "sullivan" I am Sullivan Wang, the best Breath of the Wild speedrunner ever.</h1>
       <p>Top 100 in some BotW Speedrun Categories</p>
       <p>...categories that definitely aren't the easiest categories to speedrun</p>
     <p>Nicolas Le</p>
