--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
     <title>SignBook</title>
 <style>
-   .sullivan h1 {
+   .sullivan {
          background-color: LemonChiffon;
        }
-       .sullivan h1 {
+       .sullivan {
          color: SkyBlue;
          text-align: center;
          font-family: Papyrus, Copperplate, Lucida Console;
          font-size: 40px;
        }
-       .sullivan p {
+       .sullivan {
          color: Maroon;
          text-align: center;
          font-family: Copperplate, Papyrus, Lucida Console;
@@ -70,9 +70,9 @@ font-family: "Comic Sans MS", serif;
   </head>
   <body style="background-color:Gainsboro;"> 
     <p style="color;teal">Akira Fujita</p>
-      <h1 class= "sullivan"> I am Sullivan Wang, the best Breath of the Wild speedrunner ever.</h1>
-      <p class= "sullivan">Top 100 in some BotW Speedrun Categories</p>
-      <p class= "sullivan">...categories that definitely aren't the easiest categories to speedrun</p>
+      <class= "sullivan"> I am Sullivan Wang, the best Breath of the Wild speedrunner ever.</h1>
+      <class= "sullivan">Top 100 in some BotW Speedrun Categories</p>
+      <class= "sullivan">...categories that definitely aren't the easiest categories to speedrun</p>
     <p>Nicolas Le</p>
     <div></div>
 <p style="font-family:comic sans MS;font-size:50px;color:aqua;background-color:pink "><strong>This is Jason Park P3.</strong></p>
