--- a/index.html
+++ b/index.html
@@ -1,98 +1,26 @@
 <html>
   <head>
+
     <title>SignBook</title>
 <style>
+       .#sullivan {
        .sullivan {
 		 background-color: LemonChiffon;
-  .cazinha{
-    font-family:helvetica;
-    
-  }
-  .cazinha{
-  
-  body { 
-  background-color: green;
-}
-  P {
-    color: white;
-    texxt-align: center;
-  }
-  P {
-    font-family: arial;
-    font-size: 30PX;
-
-  }
-   body {
-         background-color: LemonChiffon;
-       }
-       h1 {
          color: SkyBlue;
          text-align: center;
-         font-family: Papyrus, Copperplate, Lucida Console;
-         font-size: 40px;
-       }
-   body {
-      background-color: DarkOrchid;
-  }
-    P {
-  color: Gold;
-  text-align: center;
-  }
-    P {  
-  font-family:CURSIVE, "lucinda console";
-  font-size: 50PX;
-  }
-div {
-  width: 300px;
-  height: 300px;
-  background: gold;
-  position: relative;
-  animation: move 4s 1;
-  animation-direction: alternate;
-}
-
-@keyframes move {
-  0%   {background: navy; down: 0px; top: 0px;}
-  25%  {background: gold; up: 200px; top: 0px;}
-  50%  {background: navy; down: 200px; top: 200px;}
-  25%  {background: gold; left: 0px; top: 200px;}
-  0% {background: navy; right: 0px; top: 0px;}
-}
-  body {
-  color: purple;
-}
-.p1 {
-  font-family: "Lucida Console", "Courier New", monospace;
-}
-  .p3 {
-  font-family: "Lucida Console", "Courier New", monospace;
-}
-  p.inset {border-style: inset;}
-p {
-font-size: 24px;
-}
-h1 {
-color: blue;
-}
-body {
-font-family: "Comic Sans MS", serif;
-}
-      <body style="background-color:Pink;">
-      <font-family:Papyrus;>
-</style>
   </head>
   <body style="background-color:Gainsboro;"> 
-    
-    <p> I am the greatest Pokemon trainer of all time. I am Jeff Pitathawatchai!!!!!!!!</p>
-    <p> This is my homework assignment and I am trying to get 100/100 points</p>
     <p style="color;teal">Akira Fujita</p>
+      <h1 id= "sullivan"> I am Sullivan Wang, the best Breath of the Wild speedrunner ever.</h1>
+      <p id= "sullivan">Top 100 in some BotW Speedrun Categories</p>
+      <p id= "sullivan">...categories that definitely aren't the easiest categories to speedrun</p>
       <h1 class= "sullivan"> I am Sullivan Wang, the best Breath of the Wild speedrunner ever.</h1>
       <p class= "sullivan">Top 100 in some BotW Speedrun Categories</p>
       <p class= "sullivan">...categories that definitely aren't the easiest categories to speedrun</p>
     <p>Nicolas Le</p>
     <div></div>
 <p style="font-family:comic sans MS;font-size:50px;color:aqua;background-color:pink "><strong>This is Jason Park P3.</strong></p>
-  
+
 	<p>Allie</p>        
     <p>Daniel</p>
     <p style="color:blue;">Daniel</p>
@@ -109,6 +37,6 @@ font-family: "Comic Sans MS", serif;
 <img src="vector.jpg" alt="this is supposed to be a picture of vector from despicable me but if your seeing this it probably isint working right">
     <p>Yasuki</p>    
     <p>Jake</p>
-      <p class="cazinha">Mr. Caiznha is the best!</p>    
+      <p>Mr. Caiznha is the best!</p>    
   </body>
 </html>
