--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   }
   #cazinha{
   }
+ .CaitlynCheung{
+  color:purple;
+ }
+ .CaitlynCheung2{
+  font-size:5px;
+  }
   body {
     background-color: darkblue;
   }
@@ -128,8 +134,8 @@ font-family: "Comic Sans MS", serif;
 <h1>Kaden Lencz<h1>
   <p>hehehehehehehehehehehehehehehehehehehehehehe</p> 
 <h1 style="background-color:DodgerBlue;">Tosh Akamine &#127940;</p></h1>    
-  <p style="color:purple;">Caitlyn Cheung</p>
-      <p style="font-size:5px;">small Caitlyn Cheung</p>
+  <p class="CaitlynCheung" style="color:purple;">Caitlyn Cheung</p>
+      <p class="CaitlynCheung2" style="font-size:5px;">small Caitlyn Cheung</p>
         <p>Nolan Lieu is amazing!!</p>
            <h1>˙uᴉebe t! peaɹ ot pa!ɹt noh 'ssanb aw ta˥ ˙yeↄW s! awu hw 'ollaHW</h>
 	<p>The Header was written upside down.</p>
@@ -163,5 +169,6 @@ font-family: "Comic Sans MS", serif;
       <p>Mr. Caiznha is the best!</p>    
   </body>
 </html>
+
 
 
